--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -133,12 +133,12 @@ body {
         justify-content: center;
         align-items: center;
         height: 60px;
-        background-color: greenyellow;
+        background-color: rgb(131, 47, 131);
     }
 
     .header-input {
         outline: none;
-        padding: 0;
+        padding: 0 5px;
         border: 2px solid black;
         border-bottom-left-radius: 5px;
         border-top-left-radius: 5px;
@@ -167,10 +167,16 @@ body {
         align-items: center;
         height: 40px;
         color: #ffffff;
-        background-color: green;
+        background-color: rgb(177, 66, 241);
         border: none;
         border-radius: 10px;
+
+        transition: all 250ms ease-in-out;
+        &:hover {
+            background-color: rgb(131, 47, 131);
+        }
     }
+        
 
     .is-hidden {
         opacity: 0;
@@ -184,8 +190,11 @@ body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         gap: 20px;
         margin-top: 20px;
+        
     }
 
     .photo-card {
