made fix due to mentor's comment

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -28,7 +28,7 @@ img {
 }
 
 body {
-    background-color: #e5ffcc;
+    background-color: #ffffff;
 }
 
 @media screen and (max-width: 767px) {
@@ -78,7 +78,7 @@ body {
         align-items: center;
         height: 40px;
         color: #ffffff;
-        background-color: green;
+        background-color: rgb(177, 66, 241);
         border: none;
         border-radius: 10px;
     }
